--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pytest = "^7.4.0"
 torch = {version = "*", source = "torch_cpu"}
 torchvision = {version = "*", source = "torch_cpu"}
 torchaudio = {version = "*", source = "torch_cpu"}
+mediapipe = "0.10.0"
 
 [[tool.poetry.source]]
 name = "torch_cpu"
